--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "minimum-stability": "stable",
-    "version": "1.0.0"
+    "version": "1.0.0",
     "require": {
     	"encore/laravel-admin": "^1.5"
     },
