--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "zuweie/field-interaction",
     "description": "make the laravel-admin field has a interaction",
-    "keywords":["laravel admin", "form field", "interaction"],
+    "keywords":["laravel admin", "form field", "interaction", "fields interactive"],
     "type": "library",
     "license": "MIT",
     "authors": [
