--- a/composer.json
+++ b/composer.json
@@ -18,4 +18,11 @@
             "Field\\Interaction\\":"src/"
         }
     }
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Field\\Interaction\\InteractionServiceProvider"
+            ]
+        }
+    },
 }
